music-data-master: fix CategoryServiceTest after introducing category metrics